refactor(santa): use configuration target sets
